<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/text_about"
        android:textSize="30dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/vk_link"
        android:clickable="true"
        android:onClick="onLink"
        android:textColor="#111199"
        android:textSize="24dp"/>

    <Button
        android:id="@+id/btnGood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_good"
        android:onClick="onGood"
        android:textSize="24dp"/>

</LinearLayout>